# win_nonsense_services

./: README.md  pyproject.toml  run.pyw  win_nonsense_services.pyw
smart_win_services/: __init__.py  core.py  reg.py
